--- a/css/main.css
+++ b/css/main.css
@@ -488,6 +488,7 @@ body {
   grid-gap: 5rem;
   padding-bottom: 15rem;
   transition: all 0.5s;
+  overflow: hidden;
 }
 
 @media only screen and (max-width: 40em) {
