--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -25,6 +25,7 @@ body {
   display: grid;
   grid-template-rows: 5rem calc(100vh - 5rem) repeat(4, min-content);
   grid-template-columns: [full-start] minmax(10rem, 1fr) [center-start] repeat(4, minmax(min-content, 25rem)) [center-end] minmax(10rem, 1fr) [full-end];
+  overflow: hidden;
 }
 
 ::selection {
