--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -34,6 +34,7 @@
 
     &:focus {
       width: 22vw;
+      outline: none;
 
       @media only screen and (max-width: $bp-6) {
         width: 65vw;
