--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -61,3 +61,321 @@
   }
 
 }
+
+.form-create-page {
+  grid-column: center-start / center-end;
+  margin: 5rem 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 5rem;
+  align-items: center;
+  justify-items: center;
+
+  @media only screen and (max-width: $bp-6) {
+    margin-bottom: -25rem;
+  }
+
+  &__input-box,
+  &__checkbox-box,
+  &__radio-box,
+  &__textarea {
+    grid-column: 1 / -1;
+    display: grid;
+  }
+
+  &__input-box {
+    grid-template-columns: repeat(3, 30rem);
+    grid-gap: 3rem;
+    // justify-self: stretch;
+    // grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+
+    @media only screen and (max-width: $bp-3) {
+      grid-template-columns: 1fr;
+      justify-self: stretch;
+    }
+  }
+
+  &__checkbox-box,
+  &__radio-box {
+    grid-template-columns: min-content max-content;
+    column-gap: 8rem;
+    row-gap: 2rem;
+    font-size: 2rem;
+    font-weight: $fw-7;
+    color: $color-tirquize-dark;
+  
+    @media only screen and (max-width: $bp-7) {
+      font-size: 1.5rem;
+    }
+  }
+
+  &__checkbox-box {
+  
+    @media only screen and (max-width: $bp-7) {
+      column-gap: 4rem;
+      row-gap: 1.5rem;
+    }
+  }
+  
+  &__radio-box {
+  
+    @media only screen and (max-width: $bp-7) {
+      column-gap: 2rem;
+    }
+  }
+
+  &__select {
+    grid-column: 1 / -1;
+    width: 50rem;
+    color: $color-green-light;
+    font-weight: $fw-7;
+    text-transform: uppercase;
+  
+    @media only screen and (max-width: $bp-7) {
+      width: 30rem;
+    }
+  }
+
+  &__option {
+    // color: $color-tirquize-dark;
+    font-weight: $fw-7;
+    text-transform: capitalize;
+  }
+
+  &__checkbox,
+  &__radio {
+    display: none;
+  }
+
+  &__label {
+    display: flex;
+    align-items: center;
+
+    &-span {
+
+      &--checkbox,
+      &--radio {
+
+        margin-right: 1.5rem;
+        width: 4rem;
+        height: 4rem;
+        border: .5rem solid $color-green-light;
+        display: grid;
+        align-items: center;
+        justify-content: center;
+  
+        @media only screen and (max-width: $bp-7) {
+          width: 3rem;
+          height: 3rem;
+        }
+    
+        &::after {
+          content: "";
+          width: 2rem;
+          height: 2rem;
+          background-color: $color-tirquize-dark;
+          opacity: 0;
+  
+          @media only screen and (max-width: $bp-7) {
+            width: 1.2rem;
+            height: 1.2rem;
+          }
+        }
+
+      }
+
+      &--radio {
+
+        border-radius: 50%;
+    
+        &::after {
+          border-radius: 50%;
+        }
+  
+        @media only screen and (max-width: $bp-7) {
+          margin-right: .8rem;
+        }
+
+      }
+
+    }    
+    
+  }
+
+  &__input,
+  &__textarea,
+  &__select {
+    border: none;
+    padding: 1.5rem 3rem;
+    color: $color-tirquize-dark;
+
+    &::placeholder {
+      color: $color-green-light;
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  &__radio:checked + &__label--radio &__label-span--radio::after {
+    opacity: 1;
+  }
+
+  &__checkbox:checked + &__label--checkbox &__label-span--checkbox::after {
+    opacity: 1;
+  }
+
+  &__table-read-page {
+    grid-column: 1/ -1;
+    display: grid;
+    grid-template-columns: min-content max-content repeat(6, min-content);
+    border: .1rem solid $color-green-light;
+    border-radius: .5rem;
+    overflow: hidden;
+
+    .table-header {
+      text-transform: uppercase;
+      background-color: $color-tirquize-dark;
+      color: $color-grey-light-1;
+      font-weight: $fw-7;
+      padding: 1rem 1.5rem;
+      display: grid;
+      justify-items: center;
+
+      @media only screen and (max-width: $bp-5) {
+
+        // &--1 {
+
+        // }
+        
+        &--2 {
+          grid-column: 1 / 2;
+          grid-row: 2 / 3;
+        }
+        
+        &--3 {
+          grid-column: 1 / 2;
+          grid-row: 3 / 4;
+        }
+        
+        &--4 {
+          grid-column: 1 / 2;
+          grid-row: 4 / 5;
+        }
+        
+        &--5 {
+          grid-column: 1 / 2;
+          grid-row: 5 / 6;
+        }
+        
+        &--6 {
+          grid-column: 1 / 2;
+          grid-row: 6 / 7;
+        }
+        
+        &--7 {
+          grid-column: 1 / 2;
+          grid-row: 7 / 8;
+        }
+        
+        &--8 {
+          grid-column: 1 / 2;
+          grid-row: 8 / 9;
+        }
+      }
+    }
+
+    .table-data {
+      color: $color-tirquize-dark;
+      padding: 0.5rem 1rem;
+      border: .1rem solid $color-green-light;
+      display: grid;
+      justify-items: center;
+
+      @media only screen and (max-width: $bp-5) {
+
+        // &--1 {
+
+        // }
+        
+        &--2 {
+          grid-column: 2 / 3;
+          grid-row: 2 / 3;
+        }
+        
+        &--3 {
+          grid-column: 2 / 3;
+          grid-row: 3 / 4;
+        }
+        
+        &--4 {
+          grid-column: 2 / 3;
+          grid-row: 4 / 5;
+        }
+        
+        &--5 {
+          grid-column: 2 / 3;
+          grid-row: 5 / 6;
+        }
+        
+        &--6 {
+          grid-column: 2 / 3;
+          grid-row: 6 / 7;
+        }
+        
+        &--7 {
+          grid-column: 2 / 3;
+          grid-row: 7 / 8;
+        }
+        
+        &--8 {
+          grid-column: 2 / 3;
+          grid-row: 8 / 9;
+        }
+        
+        &--9 {
+          grid-column: 3 / 4;
+          grid-row: 1 / 2;
+        }
+        
+        &--10 {
+          grid-column: 3 / 4;
+          grid-row: 2 / 3;
+        }
+        
+        &--11 {
+          grid-column: 3 / 4;
+          grid-row: 3 / 4;
+        }
+        
+        &--12 {
+          grid-column: 3 / 4;
+          grid-row: 4 / 5;
+        }
+        
+        &--13 {
+          grid-column: 3 / 4;
+          grid-row: 5 / 6;
+        }
+        
+        &--14 {
+          grid-column: 3 / 4;
+          grid-row: 6 / 7;
+        }
+        
+        &--15 {
+          grid-column: 3 / 4;
+          grid-row: 7 / 8;
+        }
+        
+        &--16 {
+          grid-column: 3 / 4;
+          grid-row: 8 / 9;
+        }
+
+      }
+    }
+  }
+
+}
