--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -10,6 +10,7 @@
     @media only screen and (max-width: $bp-6) {
       width: 2.3rem;
       height: 2.3rem;
+      margin-left: 1.5rem;
     }
 
     &:hover,
