--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -27,6 +27,13 @@
       grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr)); 
       justify-items: center;
     }
+
+    &--create-page {  
+
+      @media only screen and (max-width: $bp-6) {
+        margin-top: -30rem;
+      }   
+    }
   }
 
   &__content {
