--- a/css/main.css
+++ b/css/main.css
@@ -529,6 +529,7 @@ body {
 @media only screen and (max-width: 30.25em) {
   .form-create-page__select {
     width: 30rem;
+    margin: 0 3rem;
   }
 }
 
@@ -614,16 +615,15 @@ body {
   opacity: 1;
 }
 
-.form-create-page__table-read-page {
+.form-create-page__table-read-page-1, .form-create-page__table-read-page-2, .form-create-page__table-read-page-3 {
   grid-column: 1/ -1;
   display: grid;
-  grid-template-columns: min-content max-content repeat(6, min-content);
   border: 0.1rem solid #61ccb0;
   border-radius: .5rem;
   overflow: hidden;
 }
 
-.form-create-page__table-read-page .table-header {
+.form-create-page__table-read-page-1 .table-header, .form-create-page__table-read-page-2 .table-header, .form-create-page__table-read-page-3 .table-header {
   text-transform: uppercase;
   background-color: #2d688f;
   color: #f7f7f7;
@@ -633,38 +633,7 @@ body {
   justify-items: center;
 }
 
-@media only screen and (max-width: 51.5em) {
-  .form-create-page__table-read-page .table-header--2 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-  }
-  .form-create-page__table-read-page .table-header--3 {
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
-  }
-  .form-create-page__table-read-page .table-header--4 {
-    grid-column: 1 / 2;
-    grid-row: 4 / 5;
-  }
-  .form-create-page__table-read-page .table-header--5 {
-    grid-column: 1 / 2;
-    grid-row: 5 / 6;
-  }
-  .form-create-page__table-read-page .table-header--6 {
-    grid-column: 1 / 2;
-    grid-row: 6 / 7;
-  }
-  .form-create-page__table-read-page .table-header--7 {
-    grid-column: 1 / 2;
-    grid-row: 7 / 8;
-  }
-  .form-create-page__table-read-page .table-header--8 {
-    grid-column: 1 / 2;
-    grid-row: 8 / 9;
-  }
-}
-
-.form-create-page__table-read-page .table-data {
+.form-create-page__table-read-page-1 .table-data, .form-create-page__table-read-page-2 .table-data, .form-create-page__table-read-page-3 .table-data {
   color: #2d688f;
   padding: 0.5rem 1rem;
   border: 0.1rem solid #61ccb0;
@@ -672,67 +641,92 @@ body {
   justify-items: center;
 }
 
+.form-create-page__table-read-page-1 {
+  grid-template-columns: min-content max-content repeat(6, min-content);
+}
+
 @media only screen and (max-width: 51.5em) {
-  .form-create-page__table-read-page .table-data--2 {
+  .form-create-page__table-read-page-1 {
+    display: none;
+  }
+}
+
+.form-create-page__table-read-page-2 {
+  display: none;
+}
+
+@media only screen and (max-width: 51.5em) {
+  .form-create-page__table-read-page-2 {
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+  }
+  .form-create-page__table-read-page-2 .table-header--2 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+  .form-create-page__table-read-page-2 .table-header--3 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+  .form-create-page__table-read-page-2 .table-header--4 {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+  }
+  .form-create-page__table-read-page-2 .table-header--5 {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+  }
+  .form-create-page__table-read-page-2 .table-header--6 {
+    grid-column: 1 / 2;
+    grid-row: 6 / 7;
+  }
+  .form-create-page__table-read-page-2 .table-header--7 {
+    grid-column: 1 / 2;
+    grid-row: 7 / 8;
+  }
+  .form-create-page__table-read-page-2 .table-header--8 {
+    grid-column: 1 / 2;
+    grid-row: 8 / 9;
+  }
+  .form-create-page__table-read-page-2 .table-data--2 {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
   }
-  .form-create-page__table-read-page .table-data--3 {
+  .form-create-page__table-read-page-2 .table-data--3 {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
   }
-  .form-create-page__table-read-page .table-data--4 {
+  .form-create-page__table-read-page-2 .table-data--4 {
     grid-column: 2 / 3;
     grid-row: 4 / 5;
   }
-  .form-create-page__table-read-page .table-data--5 {
+  .form-create-page__table-read-page-2 .table-data--5 {
     grid-column: 2 / 3;
     grid-row: 5 / 6;
   }
-  .form-create-page__table-read-page .table-data--6 {
+  .form-create-page__table-read-page-2 .table-data--6 {
     grid-column: 2 / 3;
     grid-row: 6 / 7;
   }
-  .form-create-page__table-read-page .table-data--7 {
+  .form-create-page__table-read-page-2 .table-data--7 {
     grid-column: 2 / 3;
     grid-row: 7 / 8;
   }
-  .form-create-page__table-read-page .table-data--8 {
+  .form-create-page__table-read-page-2 .table-data--8 {
     grid-column: 2 / 3;
     grid-row: 8 / 9;
   }
-  .form-create-page__table-read-page .table-data--9 {
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
-  }
-  .form-create-page__table-read-page .table-data--10 {
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
-  }
-  .form-create-page__table-read-page .table-data--11 {
-    grid-column: 3 / 4;
-    grid-row: 3 / 4;
-  }
-  .form-create-page__table-read-page .table-data--12 {
-    grid-column: 3 / 4;
-    grid-row: 4 / 5;
-  }
-  .form-create-page__table-read-page .table-data--13 {
-    grid-column: 3 / 4;
-    grid-row: 5 / 6;
-  }
-  .form-create-page__table-read-page .table-data--14 {
-    grid-column: 3 / 4;
-    grid-row: 6 / 7;
-  }
-  .form-create-page__table-read-page .table-data--15 {
-    grid-column: 3 / 4;
-    grid-row: 7 / 8;
-  }
-  .form-create-page__table-read-page .table-data--16 {
-    grid-column: 3 / 4;
-    grid-row: 8 / 9;
-  }
+}
+
+.form-create-page__table-read-page-3 {
+  grid-template-columns: min-content max-content repeat(7, min-content);
+}
+
+.form-create-page__table-read-page-3 .delete-user {
+  text-decoration: none;
+  align-self: center;
+  color: #f75002;
+  font-weight: 700;
 }
 
 .logo__icon {
