--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -227,11 +227,54 @@
     opacity: 1;
   }
 
+  // &__read-1 {
+  //   grid-column: 1 / -1;
+  //   display: flex;
+    // flex-wrap: wrap;
+    // border: .1rem solid $color-green-light;
+    // border-radius: .5rem;
+    // overflow: hidden;
+    // font-size: 1rem;
+  // }
+
+  // &__read-box {
+  //   display: flex;
+  //   flex-direction: column;
+    // flex-basis: max-content; ne radi!
+    // display: grid;
+
+    // .table-header {
+    //   text-transform: uppercase;
+    //   background-color: $color-tirquize-dark;
+    //   color: $color-grey-light-1;
+    //   font-weight: $fw-7;
+    //   padding: 1rem;
+    //   display: flex;
+    //   justify-content: center;
+      
+      // &--2 {
+      //  width: max-content; 
+      // }
+
+    // }
+
+    // .table-data {
+    //   color: $color-tirquize-dark;
+    //   padding: 0.5rem 1rem;
+    //   border: .1rem solid $color-green-light;
+
+      // &--2 {
+      //   width: max-content;
+      // }
+
+  //   }
+  // }
+
   &__table-read-page-1,
   &__table-read-page-2,
-  &__table-read-page-3 {
+  &__table-delete-page-1,
+  &__table-delete-page-2 {
     grid-column: 1/ -1;
-    display: grid;
     border: .1rem solid $color-green-light;
     border-radius: .5rem;
     overflow: hidden;
@@ -248,7 +291,7 @@
 
     .table-data {
       color: $color-tirquize-dark;
-      padding: 0.5rem 1rem;
+      padding: 1rem 1.5rem;
       border: .1rem solid $color-green-light;
       display: grid;
       justify-items: center;
@@ -256,8 +299,10 @@
   }
 
   &__table-read-page-1 {
+    display: grid;
     grid-template-columns: min-content max-content repeat(6, min-content);
-    @media only screen and (max-width: $bp-5) {
+
+    @media only screen and (max-width: $bp-3) {
       display: none;
     }
   }
@@ -265,148 +310,50 @@
   &__table-read-page-2 {
     display: none;
 
-    @media only screen and (max-width: $bp-5) {
+    .table-box {
+      display: grid;
+    }
+
+    @media only screen and (max-width: $bp-3) {
       display: grid;
       grid-template-columns: repeat(2, max-content);
-      
-      .table-header {
-        // &--1 {
-
-        // }
-        
-        &--2 {
-          grid-column: 1 / 2;
-          grid-row: 2 / 3;
-        }
-        
-        &--3 {
-          grid-column: 1 / 2;
-          grid-row: 3 / 4;
-        }
-        
-        &--4 {
-          grid-column: 1 / 2;
-          grid-row: 4 / 5;
-        }
-        
-        &--5 {
-          grid-column: 1 / 2;
-          grid-row: 5 / 6;
-        }
-        
-        &--6 {
-          grid-column: 1 / 2;
-          grid-row: 6 / 7;
-        }
-        
-        &--7 {
-          grid-column: 1 / 2;
-          grid-row: 7 / 8;
-        }
-        
-        &--8 {
-          grid-column: 1 / 2;
-          grid-row: 8 / 9;
-        }
-      }
-
-      .table-data {
-        // &--1 {
-
-        // }
-        
-        &--2 {
-          grid-column: 2 / 3;
-          grid-row: 2 / 3;
-        }
-        
-        &--3 {
-          grid-column: 2 / 3;
-          grid-row: 3 / 4;
-        }
-        
-        &--4 {
-          grid-column: 2 / 3;
-          grid-row: 4 / 5;
-        }
-        
-        &--5 {
-          grid-column: 2 / 3;
-          grid-row: 5 / 6;
-        }
-        
-        &--6 {
-          grid-column: 2 / 3;
-          grid-row: 6 / 7;
-        }
-        
-        &--7 {
-          grid-column: 2 / 3;
-          grid-row: 7 / 8;
-        }
-        
-        &--8 {
-          grid-column: 2 / 3;
-          grid-row: 8 / 9;
-        }
-        
-        // &--9 {
-        //   grid-column: 3 / 4;
-        //   grid-row: 1 / 2;
-        // }
-        
-        // &--10 {
-        //   grid-column: 3 / 4;
-        //   grid-row: 2 / 3;
-        // }
-        
-        // &--11 {
-        //   grid-column: 3 / 4;
-        //   grid-row: 3 / 4;
-        // }
-        
-        // &--12 {
-        //   grid-column: 3 / 4;
-        //   grid-row: 4 / 5;
-        // }
-        
-        // &--13 {
-        //   grid-column: 3 / 4;
-        //   grid-row: 5 / 6;
-        // }
-        
-        // &--14 {
-        //   grid-column: 3 / 4;
-        //   grid-row: 6 / 7;
-        // }
-        
-        // &--15 {
-        //   grid-column: 3 / 4;
-        //   grid-row: 7 / 8;
-        // }
-        
-        // &--16 {
-        //   grid-column: 3 / 4;
-        //   grid-row: 8 / 9;
-        // }
-      }
-
-
     }
 
   }
 
-  &__table-read-page-3 {
+  &__table-delete-page-1 {
+    display: grid;
     grid-template-columns: min-content max-content repeat(7, min-content);
-    // @media only screen and (max-width: $bp-5) {
-    //   display: none;
-    // }
+    
+    @media only screen and (max-width: $bp-3) {
+      display: none;
+    }
+
+  }
+
+  &__table-delete-page-2 {
+    display: none;
+
+    .table-box {
+      display: grid;
+    }
+
+    @media only screen and (max-width: $bp-3) {
+      display: grid;
+      grid-template-columns: repeat(2, max-content);
+    }
+
+  }
+
+  &__table-delete-page-1,
+  &__table-delete-page-2 {
 
     .delete-user {
       text-decoration: none;
       align-self: center;
       color: $color-orange-dark;
       font-weight: $fw-7;
+      text-transform: uppercase;
     }
   }
 }
