--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -15,6 +15,7 @@
       -webkit-clip-path: polygon(44% 18%, 63% 13%, 100% 8%, 100% 85%, 0 100%, 0 22%);
       clip-path: polygon(44% 18%, 63% 13%, 100% 8%, 100% 85%, 0 100%, 0 22%);
       margin-top: -35rem;
+      margin-bottom: -5rem;
     }
 
     &--create-page {
