--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -64,6 +64,7 @@ $bx-sw-5: 0 1rem 1rem 1rem rgba($color-black, .3);
 
 $transition-1: all .2s;
 $transition-2: all .5s;
+$transition-3: all 2s;
 
 // BREAKPOINTS
 
