--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/form";
 @import "components/logo";
 @import "components/paragraph";
+@import "components/slide-in";
 @import "components/social";
 
 @import "layout/features";
